third_party/rust/chromium_crates_io/vendor/bitflags-v1/tests/compile-pass/impls/convert.rs
use bitflags::bitflags;

bitflags! {
    struct Flags: u32 {
        const A = 0b00000001;
    }
}

impl From<u32> for Flags {
    fn from(v: u32) -> Flags {
        Flags::from_bits_truncate(v)
    }
}

fn main() {

}
