third_party/rust/chromium_crates_io/vendor/bitflags-v1/tests/compile-fail/visibility/pub_const.rs
use bitflags::bitflags;

bitflags! {
    pub struct Flags1: u32 {
        pub const FLAG_A = 0b00000001;
    }
}

fn main() {}
